// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  displayCharacterLeft: false
}: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--label-on-top mg-input--readonly mg-input--textarea mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: 'blu'
}: 1`] = `
<mg-input-textarea value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--readonly mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          blu
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  disabled: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-textarea value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left identifier-help-text" class="mg-input__box" disabled="" id="identifier" maxlength="4000" name="identifier" required="" rows="3" value="blu"></textarea>
            <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  readonly: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-textarea value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--readonly mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          blu
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  value: 'blu',
  helpText: 'My help text'
}: 1`] = `
<mg-input-textarea value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left identifier-help-text" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" required="" rows="3" value="blu"></textarea>
            <mg-character-left characters="blu" identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--label-on-top mg-input--textarea mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
        <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
          <mg-icon icon="info-circle"></mg-icon>
        </mg-tooltip>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title class="sr-only" identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--label-on-top mg-input--textarea mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--readonly mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', resizable: 'both' }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box mg-input__box--resizable" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', resizable: 'horizontal' }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box mg-input__box--resizable-horizontal" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should render with args { label: 'label', identifier: 'identifier', resizable: 'vertical' }: 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box mg-input__box--resizable-vertical" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea Should trigger events 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="is-focused mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left identifier-help-text" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea display error message with locale: fr 1`] = `
<mg-input-textarea lang="fr">
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" required="" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea display error message with locale: xx 1`] = `
<mg-input-textarea lang="xx">
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" required="" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea display error with displayError component's public method 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" required="" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea display error with displayError component's public method 2`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" required="" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input mg-input__input--has-error">
          <div class="mg-input__with-character-left"><textarea aria-describedby="identifier-character-left identifier-error" class="mg-input__box" id="identifier" maxlength="4000" name="identifier" rows="3"></textarea>
            <mg-character-left identifier="identifier-character-left" maxlength="4000"></mg-character-left>
          </div>
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;

exports[`mg-input-textarea validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-textarea>
  <mock:shadow-root>
    <div class="mg-input mg-input--has-display-character-left mg-input--readonly mg-input--textarea mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-textarea>
`;
